@@ -189,7 +189,7 @@ SLPError ProcessSrvTypeRqst(PSLPHandleInfo handle)
     return result;
 }                                   
 
-
+#ifdef ENABLE_ASYNC_API
 /*-------------------------------------------------------------------------*/ 
 SLPError AsyncProcessSrvTypeRqst(PSLPHandleInfo handle)
 /*-------------------------------------------------------------------------*/
@@ -200,6 +200,7 @@ SLPError AsyncProcessSrvTypeRqst(PSLPHandleInfo handle)
     handle->inUse = SLP_FALSE;
     return result;
 }
+#endif
 
 /*=========================================================================*/
 SLPError SLPFindSrvTypes(SLPHandle    hSLP,
@@ -285,6 +286,7 @@ SLPError SLPFindSrvTypes(SLPHandle    hSLP,
     /*----------------------------------------------*/
     /* Check to see if we should be async or sync   */
     /*----------------------------------------------*/
+#ifdef ENABLE_ASYNC_API
     if(handle->isAsync)
     {
         /* COPY all the referenced parameters */
@@ -310,6 +312,7 @@ SLPError SLPFindSrvTypes(SLPHandle    hSLP,
         }
     }
     else
+#endif /*ifdef ENABLE_ASYNC_API*/
     {
         /* Leave all parameters REFERENCED */
 
